# max-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  MAXBOT_README.md  QUICKSTART.md  README.docker.md  README.md  bot.py  create_nsu_graph.py  docker-compose.yml  docker-entrypoint.sh  example_bot.py  examples.py  graph_memory.py  main.py  main.ts  package.json  pnpm-lock.yaml  pyproject.toml  quick_demo.py  requirements.txt  swagger.json  test_graph_memory.py  tsconfig.json
baza/: dorm.md  econom.md  fen.md  ff.md  fit.md  ggf.md  gi.md  hobby.md  ifp.md  iir.md  mmf.md  nsu.md  zelman.md
bot/: __init__.py  main.py
data/lightrag/NSU/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
data/lightrag/test_graph/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
llm/: __init__.py  gigachat.py
maxbot/: __init__.py  bot.py  dispatcher.py  filters.py  types.py
maxbot_api/: bot.py  filters.py  types.py
memory/: graph_memory.py  test_graph_memory.py
